map view for granular info and precaution carousel

--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,12 @@
     transform: rotate(360deg);
   }
 }
+
+nav {
+  display: flex;
+  justify-content: flex-flex-start;
+  align-items: center;
+  min-height: 10vh;
+  background: #231f20;
+  color: white;
+}
